fixed z-index issue

--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -80,11 +80,13 @@
   &--small {
     width: 75px;
     height: 75px;
+    z-index: 150;
   }
 
   &--large {
     height: 100vh;
     width: 16.6vw * 4;}
+    z-index: 200;
 
   &__button {
     background-color: var(--primary-color);
