--- a/src/components/panels/ClassSelectionPanel/ClassSelectionPanel.scss
+++ b/src/components/panels/ClassSelectionPanel/ClassSelectionPanel.scss
@@ -25,6 +25,7 @@
     padding: 10px 5px;
     border-top: 2px solid black;
     transition: all 0.3s linear;
+    list-style: none;
 
 
     &--unfocused {
